# Meteor

./: .gitignore  .travis.yml  CMakeLists.txt  ConfigManager.h  Metro.pro  MetroPainter.cpp  MetroPainter.h  MetroWidget.cpp  MetroWidget.h  README.md  Task.h  TaskAddTimestamp.cpp  TaskAddTimestamp.h  TaskDelay.cpp  TaskFactory.cpp  TaskFlowAnalysis.cpp  TaskGetMapping.cpp  TaskInitDatabase.cpp  TaskInitDatabase.h  TaskPlanRoute.cpp  TaskPlanRoute.h  TaskQuery.cpp  TaskQuery.h  TaskQueryEntryExit.cpp  TaskQueryEntryExit.h  TaskReadDataset.cpp  TaskReadDataset.h  TaskScheduler.cpp  TaskScheduler.h  db.cpp  db.h  main.cpp  main.mm  mainwindow.cpp  mainwindow.h  mainwindow.ui  station_line.csv  task.cpp  task.h  taskreaddataset.cpp  (+3 more)
src/: ConfigManager.cpp  Meteor.h  MetroChartView.cpp  MetroChartView.h  MetroPainter.cpp  MetroPainter.h  MetroWidget.cpp  MetroWidget.h  SmartTravelModel.hpp  Task.h  TaskBaseFlowAnalysis.cpp  TaskBaseFlowAnalysis.h  TaskDelay.h  TaskFlowAnalysis.cpp  TaskFlowAnalysis.h  TaskGetMapping.cpp  TaskGetMapping.h  TaskInitDatabase.cpp  TaskPlanRoute.cpp  TaskPlanRoute.h  TaskQueryEntryExit.cpp  TaskQueryEntryExit.h  TaskQueryFlow.cpp  TaskQueryFlow.h  TaskQuerySmartTravel.cpp  TaskQuerySmartTravel.h  TaskReadDataset.cpp  TaskReadDataset.h  TaskScheduler.cpp  TaskScheduler.h  TaskSmartTravel.cpp  TaskSmartTravel.h  TouchBar.cpp  TouchBar.h  TouchBar.mm  db.cpp  db.h  main.cpp  main.h  main.mm  (+13 more)
